--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
 
     <section class="container"> 
-                <img src="/images/belluccia.png" width="32" height="32">
+                <img src="images/belluccia.png" width="32" height="32">
                 <h5>¡Hola mundo!</h5>
                 <h1>Arranca el TP 4</h1> 
                 <p>Cada estudiante diseñará y desarrollará un sitio web adaptable para un producto real de una sola página en formato continuo.</p> 
